tests/ui/generic-associated-types/issue-88595.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-88595.rs:21:23
   |
LL |     fn a(&'a self) -> Self::B<'a> {}
   |                       ^^^^^^^^^^^ generic argument `'a` used twice
   |
note: for this opaque type
  --> $DIR/issue-88595.rs:19:18
   |
LL |     type B<'b> = impl Clone;
   |                  ^^^^^^^^^^

error: aborting due to previous error

